--- a/.travis.yml
+++ b/.travis.yml
@@ -24,10 +24,10 @@ matrix:
       addons: { apt: { packages: ["cmake", "clang-3.9", "libc++-dev", "libc++abi-dev"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-trusty-3.9"] } }
     - env: COMPILER=clang++-4.0 CXXLIBRARY="-stdlib=libc++ -lc++abi -lsupc++"
       addons: { apt: { packages: ["cmake", "clang-4.0", "libc++-dev", "libc++abi-dev"], sources: ["ubuntu-toolchain-r-test", "llvm-toolchain-trusty-4.0"] } }
-    - env: COMPILER=clang++-5.0 CXXLIBRARY="-stdlib=libc++ -lc++abi -lsupc++"
-      addons: { apt: { packages: ["cmake", "clang-5.0", "libc++-dev", "libc++abi-dev"], sources: ["ubuntu-toolchain-r-test"] } }
-    - env: COMPILER=clang++-6.0 CXXLIBRARY="-stdlib=libc++ -lc++abi -lsupc++"
-      addons: { apt: { packages: ["cmake", "clang-6.0", "libc++-dev", "libc++abi-dev"], sources: ["ubuntu-toolchain-r-test"] } }
+#    - env: COMPILER=clang++-5.0 CXXLIBRARY="-stdlib=libc++ -lc++abi -lsupc++"
+#      addons: { apt: { packages: ["cmake", "clang-5.0", "libc++-dev", "libc++abi-dev"], sources: ["ubuntu-toolchain-r-test"] } }
+#    - env: COMPILER=clang++-6.0 CXXLIBRARY="-stdlib=libc++ -lc++abi -lsupc++"
+#      addons: { apt: { packages: ["cmake", "clang-6.0", "libc++-dev", "libc++abi-dev"], sources: ["ubuntu-toolchain-r-test"] } }
       
 install:
   - export CXX=${COMPILER}
